--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -13384,7 +13384,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-LMOVALM DIALOG DISCARDABLE 80, 40, 383, 211
+LMOVALM DIALOG DISCARDABLE 80, 40, 383, 224
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Lineas de movimientos de almacén"
 FONT 8, "MS Sans Serif"
@@ -13396,27 +13396,29 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 121, "Edit", WS_BORDER, 168, 39, 205, 12
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 76, 52, 68, 12
   CONTROL "", 131, "Edit", WS_BORDER, 168, 52, 205, 12
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 104, 68, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 117, 68, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 76, 130, 68, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 143, 68, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER, 76, 156, 68, 11
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 104, 68, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 117, 68, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 130, 68, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 76, 143, 68, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 156, 68, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER, 76, 169, 68, 11
   CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 205, 156, 70, 11
   CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER, 277, 156, 20, 11
   CONTROL "", 220, "Edit", ES_RIGHT|WS_BORDER, 205, 169, 70, 11
+  CONTROL "", 440, "Edit", WS_BORDER|WS_TABSTOP, 205, 182, 172, 11
   CONTROL "", 230, "Edit", ES_RIGHT|WS_BORDER, 277, 169, 20, 11
-  CONTROL "Series [F6]", 500, "Button", WS_TABSTOP, 4, 183, 50, 14
-  CONTROL "&Aceptar [F5]", 510, "Button", WS_TABSTOP, 218, 183, 50, 14
-  CONTROL "&Cancelar", 520, "Button", WS_TABSTOP, 273, 183, 50, 14
-  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 328, 183, 50, 14
-  CONTROL "Cajas ", 142, "Static", WS_GROUP, 10, 107, 48, 8
-  CONTROL "Total unidades", -1, "Static", WS_GROUP, 10, 133, 60, 8
-  CONTROL "Unidades", 152, "Static", WS_GROUP, 10, 120, 43, 8
+  CONTROL "Series [F6]", 500, "Button", WS_TABSTOP, 4, 196, 50, 14
+  CONTROL "&Aceptar [F5]", 510, "Button", WS_TABSTOP, 218, 196, 50, 14
+  CONTROL "&Cancelar", 520, "Button", WS_TABSTOP, 273, 196, 50, 14
+  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 328, 196, 50, 14
+  CONTROL "Cajas ", 142, "Static", WS_GROUP, 10, 120, 48, 8
+  CONTROL "Total unidades", -1, "Static", WS_GROUP, 10, 146, 60, 8
+  CONTROL "Unidades", 152, "Static", WS_GROUP, 10, 133, 43, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 10, 16, 36, 8
   CONTROL "Propiedad 2", 132, "Static", WS_GROUP, 10, 54, 44, 8
   CONTROL "Propiedad 1", 122, "Static", WS_GROUP, 10, 41, 44, 8
-  CONTROL "Precio costo", 181, "Static", WS_GROUP, 10, 146, 61, 8
-  CONTROL "Total precio", 191, "Static", WS_GROUP, 10, 159, 61, 8
+  CONTROL "Precio costo", 181, "Static", WS_GROUP, 10, 159, 61, 8
+  CONTROL "Total precio", 191, "Static", WS_GROUP, 10, 172, 61, 8
   CONTROL "Lote", 154, "Static", WS_GROUP, 10, 29, 44, 8
   CONTROL "Peso", -1, "Static", WS_GROUP, 149, 159, 21, 8
   CONTROL "Volumen", -1, "Static", WS_GROUP, 149, 172, 33, 8
@@ -13431,6 +13433,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Stock destino", 413, "Static", WS_GROUP, 149, 146, 45, 8
   CONTROL "Stock origen", 404, "Static", WS_GROUP, 149, 120, 45, 8
   CONTROL "Almacen destino", -1, "Static", WS_GROUP, 149, 133, 55, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 149, 185, 33, 8
+  CONTROL "Bultos", 431, "Static", WS_GROUP, 10, 107, 48, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
