--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -8620,20 +8620,21 @@ FONT 8, "MS Sans Serif"
   CONTROL "Resultado de la importación", -1, "Button", BS_GROUPBOX, 3, 215, 392, 104
 }
 
-IMPORTARPRODUCTOSPROVEEDOR DIALOGEX DISCARDABLE 6, 18, 153, 67
+IMPORTARPRODUCTOSPROVEEDOR DIALOGEX DISCARDABLE 6, 18, 413, 80
 STYLE WS_POPUP|DS_MODALFRAME|DS_CONTEXTHELP|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Importar productos de proveedor"
 FONT 8, "MS Sans Serif", 0, 0, 1
 {
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 4, 60, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 17, 60, 12
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 31, 47, 12
-  CONTROL "&Aceptar", IDOK, "Button", WS_TABSTOP, 40, 48, 50, 15
-  CONTROL "Cancelar", IDCANCEL, "Button", WS_TABSTOP, 98, 48, 50, 15
-  CONTROL "Desde", -1, "Static", WS_GROUP, 8, 7, 30, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 8, 20, 30, 8
-  CONTROL "Incremento", -1, "Static", WS_GROUP, 8, 34, 41, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 102, 33, 11, 8
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 205, 4, 60, 12
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 205, 17, 60, 12
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 205, 31, 47, 12
+  CONTROL "&Aceptar", IDOK, "Button", WS_TABSTOP, 301, 48, 50, 15
+  CONTROL "Cancelar", IDCANCEL, "Button", WS_TABSTOP, 359, 48, 50, 15
+  CONTROL "Desde", -1, "Static", WS_GROUP, 161, 7, 30, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 161, 20, 30, 8
+  CONTROL "Incremento", -1, "Static", WS_GROUP, 161, 34, 41, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 255, 33, 8, 8
+  CONTROL "Proceso :", 130, "Static", WS_GROUP, 3, 69, 408, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
