--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1906,16 +1906,16 @@ ASS_PEDCLI1 DIALOG DISCARDABLE 88, 53, 394, 194
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 49, 9, 55, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 130, 9, 214, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 49, 21, 55, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 130, 21, 214, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 49, 44, 80, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 130, 44, 214, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 49, 56, 80, 12
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 130, 56, 214, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 49, 78, 55, 12
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 130, 78, 214, 12
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 49, 9, 55, 10
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 130, 9, 254, 10
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 49, 21, 55, 10
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 130, 21, 254, 10
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 49, 44, 80, 10
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 130, 44, 254, 10
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 49, 56, 80, 10
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 130, 56, 254, 10
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 49, 78, 55, 10
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 130, 78, 254, 10
   CONTROL "Menor que 0", 201, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 104, 55, 12
   CONTROL "Menor o igual que 0", 202, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 118, 79, 12
   CONTROL "Menor que stock minimo", 203, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 132, 90, 12
@@ -1923,7 +1923,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Stock mínimo", 212, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 104, 55, 12
   CONTROL "Stock máximo", 213, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 118, 56, 12
   CONTROL "Cant. pedido cliente", 214, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 132, 79, 12
-  CONTROL "msctls_progress32", 220, "msctls_progress32", 0x00000000, 49, 175, 336, 10
+  CONTROL "", 220, "msctls_progress32", 0x00000000, 49, 174, 336, 10
   CONTROL "Desde", -1, "Static", WS_GROUP, 9, 12, 35, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 9, 24, 35, 8
   CONTROL "Desde", -1, "Static", WS_GROUP, 9, 47, 26, 8
@@ -1934,7 +1934,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Almacén", -1, "Button", BS_GROUPBOX, 3, 70, 386, 23
   CONTROL "Stock disponible", -1, "Button", BS_GROUPBOX, 3, 93, 192, 71
   CONTROL "Igualar stock a", -1, "Button", BS_GROUPBOX, 197, 93, 192, 71
-  CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 3, 168, 386, 20
+  CONTROL "", -1, "Button", BS_GROUPBOX, 3, 166, 386, 22
 }
 
 ASS_PEDCLI2 DIALOG DISCARDABLE 132, 67, 426, 194
@@ -1966,21 +1966,21 @@ ASS_PEDPRV1 DIALOG DISCARDABLE 88, 53, 394, 194
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 49, 9, 55, 12
-  CONTROL "", 120, "Edit", WS_BORDER, 130, 9, 214, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 49, 34, 80, 12
-  CONTROL "", 160, "Edit", WS_BORDER, 130, 34, 214, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 49, 46, 80, 12
-  CONTROL "", 180, "Edit", WS_BORDER, 130, 46, 214, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 49, 68, 55, 12
-  CONTROL "", 200, "Edit", WS_BORDER, 130, 68, 214, 12
-  CONTROL "Menor que 0", 201, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 106, 55, 12
-  CONTROL "Menor o igual que 0", 202, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 120, 79, 12
-  CONTROL "Menor que stock minimo", 203, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 134, 90, 12
-  CONTROL "Todos los artículos del proveedor", 204, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 148, 118, 12
-  CONTROL "Stock mínimo", 212, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 106, 55, 12
-  CONTROL "Stock máximo", 213, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 120, 56, 12
-  CONTROL "msctls_progress32", 220, "msctls_progress32", 0x00000000, 49, 175, 336, 10
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 49, 9, 55, 11
+  CONTROL "", 120, "Edit", WS_BORDER, 130, 9, 256, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 49, 34, 80, 11
+  CONTROL "", 160, "Edit", WS_BORDER, 130, 34, 256, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 49, 46, 80, 11
+  CONTROL "", 180, "Edit", WS_BORDER, 130, 46, 256, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 49, 68, 55, 11
+  CONTROL "", 200, "Edit", WS_BORDER, 130, 68, 256, 11
+  CONTROL "Menor que 0", 201, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 96, 55, 11
+  CONTROL "Menor o igual que 0", 202, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 110, 79, 11
+  CONTROL "Menor que stock minimo", 203, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 124, 90, 11
+  CONTROL "Todos los artículos del proveedor", 204, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 138, 118, 11
+  CONTROL "Stock mínimo", 212, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 96, 55, 11
+  CONTROL "Stock máximo", 213, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 110, 56, 11
+  CONTROL "", 220, "msctls_progress32", 0x00000000, 49, 174, 336, 10
   CONTROL "Código", -1, "Static", WS_GROUP, 9, 12, 35, 8
   CONTROL "Desde", -1, "Static", WS_GROUP, 9, 37, 26, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 9, 59, 25, 8
@@ -1990,7 +1990,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Almacén", -1, "Button", BS_GROUPBOX, 3, 60, 386, 23
   CONTROL "Stock disponible", -1, "Button", BS_GROUPBOX, 3, 84, 192, 80
   CONTROL "Igualar stock a", -1, "Button", BS_GROUPBOX, 197, 84, 192, 80
-  CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 3, 168, 386, 20
+  CONTROL "", -1, "Button", BS_GROUPBOX, 3, 166, 386, 22
   CONTROL "Hasta", -1, "Static", WS_GROUP, 9, 49, 26, 8
 }
 
@@ -12783,25 +12783,26 @@ LFACCLI_6 DIALOG DISCARDABLE 16, 4, 359, 212
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 1, 30, 12
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 1, 30, 11
   CONTROL "No imprimir línea ", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 14, 75, 10
-  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 24, 60, 12
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 24, 60, 11
   CONTROL "Línea de control", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 37, 75, 10
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 100, 45, 60, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 100, 57, 255, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 100, 70, 60, 12
-  CONTROL "", 151, "Edit", WS_BORDER, 161, 70, 194, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 100, 82, 60, 12
-  CONTROL "", 161, "Edit", WS_BORDER, 161, 82, 194, 12
-  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 107, 100, 12
-  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 100, 94, 60, 12
-  CONTROL "", 321, "Edit", WS_BORDER, 161, 94, 194, 12
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 100, 45, 60, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 100, 57, 255, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 100, 70, 60, 11
+  CONTROL "", 151, "Edit", WS_BORDER, 161, 70, 194, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 100, 82, 60, 11
+  CONTROL "", 161, "Edit", WS_BORDER, 161, 82, 194, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 107, 100, 11
+  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 100, 94, 60, 11
+  CONTROL "", 321, "Edit", WS_BORDER, 161, 94, 194, 11
   CONTROL "Linea de artículo compuesto", 331, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 132, 106, 10
   CONTROL "Linea de artículo componente", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 143, 107, 10
   CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 154, 79, 10
   CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 166, 68, 10
   CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 177, 49, 10
   CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 188, 71, 10
+  CONTROL "", 360, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 199, 60, 11
   CONTROL "Nº Línea", -1, "Static", WS_GROUP, 5, 4, 30, 8
   CONTROL "Precio vta. recomendado", -1, "Static", WS_GROUP, 5, 48, 80, 8
   CONTROL "Fecha de entrega", -1, "Static", WS_GROUP, 5, 27, 66, 8
@@ -12811,6 +12812,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Margen", 301, "Static", WS_GROUP, 5, 109, 24, 8
   CONTROL "Proveedor", -1, "Static", WS_GROUP, 5, 97, 69, 8
   CONTROL "Utilizar el volumen en el cálculo de impuestos especiales", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 121, 192, 10
+  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 5, 202, 66, 8
 }
 
 LFACCLI_7 DIALOG DISCARDABLE 16, 4, 359, 212
