--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -132,7 +132,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
 
-ADSADMIN DIALOG DISCARDABLE 37, 77, 621, 340
+ADSADMIN DIALOG DISCARDABLE 37, 77, 621, 336
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION
 CAPTION "Diccionario de datos para ADS"
 FONT 8, "MS Sans Serif"
@@ -141,15 +141,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "Empresas", -1, "Button", BS_GROUPBOX, 44, 30, 574, 219
   CONTROL "", -1, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Creación de diccionario de datos para ADS", -1, "Static", WS_GROUP, 44, 3, 141, 8
-  CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 44, 303, 574, 36
+  CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 44, 303, 574, 30
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 48, 41, 566, 203
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 512, 289, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 567, 289, 50, 14
-  CONTROL "", 500, "msctls_progress32", 0x00000000, 48, 323, 566, 6
-  CONTROL "", 510, "msctls_progress32", 0x00000000, 48, 330, 566, 6
+  CONTROL "", 500, "TApoloMeter", 0x00000000, 48, 314, 566, 6
+  CONTROL "", 510, "TApoloMeter", 0x00000000, 48, 321, 566, 6
   CONTROL "Actualizar bases de datos", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 260, 94, 10
   CONTROL "Crear triggers para tablas auxiliares", 610, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 273, 122, 10
-  CONTROL "Progreso", 4001, "Button", BS_GROUPBOX, 43, 250, 574, 36
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 43, 250, 574, 36
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
