--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -82,3 +82,6 @@ printer_delete BITMAP "..\\bmp\\printer_delete.bmp"
 printer_new BITMAP "..\\bmp\\printer_new.bmp"
 photo_scenery_16 BITMAP "..\\bmp\\photo_scenery_16.bmp"
 scales_32 BITMAP "..\\bmp\\scales_32.bmp"
+checkflat_32 BITMAP "..\\bmp\\checkflat_32.bmp"
+cancelflat_32 BITMAP "..\\bmp\\cancelflat_32.bmp"
+searchflat_32 BITMAP "..\\bmp\\searchflat_32.bmp"
