--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -82,6 +82,10 @@ printer_delete BITMAP "..\\bmp\\printer_delete.bmp"
 printer_new BITMAP "..\\bmp\\printer_new.bmp"
 photo_scenery_16 BITMAP "..\\bmp\\photo_scenery_16.bmp"
 scales_32 BITMAP "..\\bmp\\scales_32.bmp"
-checkflat_32 BITMAP "..\\bmp\\checkflat_32.bmp"
-cancelflat_32 BITMAP "..\\bmp\\cancelflat_32.bmp"
-searchflat_32 BITMAP "..\\bmp\\searchflat_32.bmp"
+flat_add_64 BITMAP "..\\bmp\\flat_add_64.bmp"
+flat_check_64 BITMAP "..\\bmp\\flat_check_64.bmp"
+flat_config_64 BITMAP "..\\bmp\\flat_config_64.bmp"
+flat_del_64 BITMAP "..\\bmp\\flat_del_64.bmp"
+flat_edit_64 BITMAP "..\\bmp\\flat_edit_64.bmp"
+flat_end_64 BITMAP "..\\bmp\\flat_end_64.bmp"
+flat_minus_64 BITMAP "..\\bmp\\flat_minus_64.bmp"
