--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19852,3 +19852,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Col.", -1, "Static", WS_GROUP, 319, 9, 13, 8
 }
 
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+MSGSTOPTCT DIALOG DISCARDABLE 113, 81, 206, 52
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Confirme supresión."
+FONT 15, "Segoe UI Light"
+{
+  CONTROL "Aceptar", IDOK, "Button", WS_TABSTOP, 86, 27, 32, 23
+  CONTROL "¿ Desea eliminar el registro en curso\?", 100, "Static", SS_CENTER|WS_GROUP, 2, 4, 200, 21
+}
+
