--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -89,3 +89,6 @@ flat_del_64 BITMAP "..\\bmp\\flat_del_64.bmp"
 flat_edit_64 BITMAP "..\\bmp\\flat_edit_64.bmp"
 flat_end_64 BITMAP "..\\bmp\\flat_end_64.bmp"
 flat_minus_64 BITMAP "..\\bmp\\flat_minus_64.bmp"
+flat_up_64 BITMAP "..\\bmp\\flat_up_64.bmp"
+flat_down_64 BITMAP "..\\bmp\\flat_down_64.bmp"
+flat_document_64 BITMAP "..\\bmp\\flat_document_64.bmp"
