--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -92,3 +92,5 @@ flat_minus_64 BITMAP "..\\bmp\\flat_minus_64.bmp"
 flat_up_64 BITMAP "..\\bmp\\flat_up_64.bmp"
 flat_down_64 BITMAP "..\\bmp\\flat_down_64.bmp"
 flat_document_64 BITMAP "..\\bmp\\flat_document_64.bmp"
+flat_page_up_64 BITMAP "..\\bmp\\flat_page_up_64.bmp"
+flat_page_down_64 BITMAP "..\\bmp\\flat_page_down_64.bmp"
