--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2375,18 +2375,18 @@ BANCOS DIALOG DISCARDABLE 51, -26, 278, 168
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 9, 35, 12
-  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 21, 209, 12
-  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 33, 209, 12
-  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 45, 209, 12
-  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 57, 209, 12
-  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 69, 80, 12
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 182, 69, 80, 12
-  CONTROL "", 170, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 81, 80, 12
-  CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 182, 81, 80, 12
-  CONTROL "", 190, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 93, 209, 12
-  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 120, 35, 12
-  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 132, 35, 12
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 9, 35, 11
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 21, 209, 11
+  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 33, 209, 11
+  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 45, 209, 11
+  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 57, 209, 11
+  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 69, 80, 11
+  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 182, 69, 80, 11
+  CONTROL "", 170, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 81, 80, 11
+  CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 182, 81, 80, 11
+  CONTROL "", 190, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 93, 209, 11
+  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 120, 35, 11
+  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 53, 132, 35, 11
   CONTROL "&Aceptar [F5]", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 168, 152, 50, 14
   CONTROL "&Cancelar", 550, "Button", WS_TABSTOP, 219, 152, 50, 14
   CONTROL "Banco", -1, "Button", BS_GROUPBOX, 4, 0, 265, 108
@@ -2394,7 +2394,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 10, 48, 34, 8
   CONTROL "Población", -1, "Static", WS_GROUP, 10, 60, 34, 8
   CONTROL "Provincia", -1, "Static", WS_GROUP, 138, 72, 33, 8
-  CONTROL "Cod. Postal", -1, "Static", WS_GROUP, 10, 72, 38, 8
+  CONTROL "Cod. postal", -1, "Static", WS_GROUP, 10, 72, 38, 8
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 10, 84, 32, 8
   CONTROL "Fax", -1, "Static", WS_GROUP, 138, 84, 15, 8
   CONTROL "Contacto", -1, "Static", WS_GROUP, 10, 96, 34, 8
@@ -4872,36 +4872,36 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Cuentas de remesas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 102, 13, 46, 12
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 102, 25, 210, 12
-  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 102, 53, 210, 12
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 102, 65, 210, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 102, 77, 22, 12
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 125, 77, 22, 12
-  CONTROL "", 132, "Edit", WS_BORDER|WS_TABSTOP, 148, 77, 30, 12
-  CONTROL "", 133, "Edit", WS_BORDER|WS_TABSTOP, 179, 77, 30, 12
-  CONTROL "", 134, "Edit", WS_BORDER|WS_TABSTOP, 210, 77, 22, 12
-  CONTROL "", 135, "Edit", WS_BORDER|WS_TABSTOP, 234, 77, 78, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 102, 90, 45, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 102, 102, 70, 12
-  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 174, 102, 138, 12
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 102, 114, 70, 12
-  CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 174, 114, 138, 12
-  CONTROL "", 190, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 102, 140, 46, 12
-  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 278, 140, 34, 12
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 102, 152, 210, 12
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 102, 164, 70, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 102, 177, 34, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 138, 177, 34, 12
-  CONTROL "", 400, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 102, 204, 46, 12
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 278, 204, 34, 12
-  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 102, 216, 210, 12
-  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 102, 228, 70, 12
-  CONTROL "", 440, "Edit", WS_BORDER|WS_TABSTOP, 102, 240, 210, 12
-  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 102, 252, 70, 12
-  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 173, 252, 139, 12
-  CONTROL "", 470, "Edit", WS_BORDER|WS_TABSTOP, 102, 264, 210, 12
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 102, 293, 70, 12
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 102, 13, 46, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 102, 25, 210, 11
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 102, 53, 210, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 102, 65, 210, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 102, 77, 22, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 115, 77, 22, 11
+  CONTROL "", 132, "Edit", WS_BORDER|WS_TABSTOP, 148, 77, 30, 11
+  CONTROL "", 133, "Edit", WS_BORDER|WS_TABSTOP, 179, 77, 30, 11
+  CONTROL "", 134, "Edit", WS_BORDER|WS_TABSTOP, 210, 77, 22, 11
+  CONTROL "", 135, "Edit", WS_BORDER|WS_TABSTOP, 234, 77, 78, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 102, 90, 45, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 102, 102, 70, 11
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 174, 102, 138, 11
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 102, 114, 70, 11
+  CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 174, 114, 138, 11
+  CONTROL "", 190, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 102, 140, 46, 11
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 278, 140, 34, 11
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 102, 152, 210, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 102, 164, 70, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 102, 177, 34, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 138, 177, 34, 11
+  CONTROL "", 400, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 102, 204, 46, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 278, 204, 34, 11
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 102, 216, 210, 11
+  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 102, 228, 70, 11
+  CONTROL "", 440, "Edit", WS_BORDER|WS_TABSTOP, 102, 240, 210, 11
+  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 102, 252, 70, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 173, 252, 139, 11
+  CONTROL "", 470, "Edit", WS_BORDER|WS_TABSTOP, 102, 264, 210, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 102, 293, 70, 11
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 212, 315, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 268, 315, 50, 14
   CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 2, 3, 316, 38
@@ -4961,8 +4961,8 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Delegación"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 36, 2, 33, 12
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 36, 15, 188, 12
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 36, 2, 33, 11
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 36, 15, 188, 11
   CONTROL "Código", -1, "Static", WS_GROUP, 3, 5, 27, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 3, 18, 27, 8
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 121, 37, 50, 14
