Exportacion de clientes error en dialogo

--- a/resource/Rptapolo.rc
+++ b/resource/Rptapolo.rc
@@ -19471,7 +19471,7 @@ FASTFILTROS_ALMACENADOS DIALOG DISCARDABLE 9, 8, 440, 223
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 200, "TXBrowse", 0x00200000, 2, 20, 436, 202
+  CONTROL "", 200, "IXBrowse", 0x00200000, 2, 20, 436, 202
   CONTROL "Cargar", 100, "Button", WS_TABSTOP, 2, 4, 50, 14
   CONTROL "Eliminar", 110, "Button", WS_TABSTOP, 57, 4, 50, 14
 }
@@ -19483,7 +19483,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Inicializar", 100, "Button", WS_TABSTOP, 2, 4, 50, 14
   CONTROL "Eliminar linea", 120, "Button", WS_TABSTOP, 57, 4, 50, 14
   CONTROL "Guardar filtro", 110, "Button", WS_TABSTOP, 378, 4, 60, 14
-  CONTROL "", 200, "TXBrowse", 0x00200000, 2, 20, 436, 202
+  CONTROL "", 200, "IXBrowse", 0x00200000, 2, 20, 436, 202
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
