Stock por almacenes

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19880,8 +19880,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 53, 4, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 105, 4, 50, 14
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 20, 421, 208
-  CONTROL "&Aceptar [F5]", 550, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 318, 231, 50, 14
-  CONTROL "&Cancelar", 560, "Button", WS_TABSTOP, 373, 231, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 318, 231, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 373, 231, 50, 14
 }
 
 ART_ALMACEN_EDICION DIALOG DISCARDABLE 48, 64, 413, 77
