--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -92,7 +92,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 2, 322, 182, 4
+  CONTROL "", 460, "msctls_progress32", WS_BORDER|WS_TABSTOP, 2, 322, 182, 4
   CONTROL "", 201, "Button", WS_TABSTOP, 237, 8, 40, 38
   CONTROL "", 202, "Button", WS_TABSTOP, 237, 61, 40, 38
   CONTROL "", 203, "Button", WS_TABSTOP, 237, 114, 40, 38
@@ -718,7 +718,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 4, 429, 205, 6
+  CONTROL "", 460, "msctls_progress32", WS_BORDER|WS_TABSTOP, 4, 429, 205, 6
   CONTROL "", 501, "Button", BS_BOTTOM|BS_MULTILINE|WS_TABSTOP, 217, 83, 61, 64
   CONTROL "", 203, "Button", BS_MULTILINE|WS_TABSTOP, 217, 170, 61, 64
   CONTROL "", 204, "Button", BS_MULTILINE|WS_TABSTOP, 281, 170, 61, 64
@@ -1011,7 +1011,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 473, 434, 202, 6
+  CONTROL "", 460, "msctls_progress32", WS_BORDER|WS_TABSTOP, 473, 434, 202, 6
   CONTROL "", 116, "Button", WS_TABSTOP, 626, 404, 50, 28
   CONTROL "", 115, "Button", WS_TABSTOP, 626, 375, 50, 28
   CONTROL "", 113, "Button", WS_TABSTOP, 626, 317, 50, 28
@@ -1614,7 +1614,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 4, 413, 205, 6
+  CONTROL "", 460, "msctls_progress32", WS_BORDER|WS_TABSTOP, 4, 413, 205, 6
   CONTROL "", 501, "Button", BS_BOTTOM|BS_MULTILINE|WS_TABSTOP, 302, 83, 61, 64
   CONTROL "", 203, "Button", BS_MULTILINE|WS_TABSTOP, 302, 167, 61, 64
   CONTROL "", 204, "Button", BS_MULTILINE|WS_TABSTOP, 366, 167, 61, 64
@@ -1900,7 +1900,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 400, "msctls_progress32", WS_TABSTOP|0x00800000, 1, 356, 688, 4
+  CONTROL "", 400, "msctls_progress32", WS_BORDER|WS_TABSTOP, 1, 356, 688, 4
   CONTROL "", 503, "Button", WS_TABSTOP, 387, 319, 42, 36
   CONTROL "", 115, "Button", NOT WS_VISIBLE|WS_TABSTOP, 644, 281, 42, 36
   CONTROL "", 113, "Button", NOT WS_VISIBLE|WS_TABSTOP, 644, 208, 42, 36
@@ -2332,7 +2332,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 400, "msctls_progress32", WS_TABSTOP|0x00800000, 1, 257, 523, 5
+  CONTROL "", 400, "msctls_progress32", WS_BORDER|WS_TABSTOP, 1, 257, 523, 5
   CONTROL "", 503, "Button", WS_TABSTOP, 361, 223, 32, 32
   CONTROL "", 115, "Button", NOT WS_VISIBLE|WS_TABSTOP, 492, 189, 32, 32
   CONTROL "", 113, "Button", NOT WS_VISIBLE|WS_TABSTOP, 492, 123, 32, 32
@@ -2468,5 +2468,18 @@ FONT 12, "Segoe UI"
   CONTROL "", 111, "Button", WS_TABSTOP, 32, 170, 30, 22
   CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 230, 170, 30, 22
   CONTROL "", 100, "C5ImageView", WS_TABSTOP|0x00800000, 2, 2, 258, 166
+}
+
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+
+LOTE_TCT DIALOG DISCARDABLE 6, 18, 157, 30
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Lote"
+FONT 20, "Segoe UI"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 19, 3, 136, 10
+  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 122, 16, 16, 12
+  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 139, 16, 16, 12
+  CONTROL "Lote", -1, "Static", WS_GROUP, 2, 5, 16, 8
 }
 
