--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -96,3 +96,4 @@ flat_page_up_64 BITMAP "..\\bmp\\flat_page_up_64.bmp"
 flat_page_down_64 BITMAP "..\\bmp\\flat_page_down_64.bmp"
 flat_left_64 BITMAP "..\\bmp\\flat_left_64.bmp"
 flat_right_64 BITMAP "..\\bmp\\flat_right_64.bmp"
+flat_printer_64 BITMAP "..\\bmp\\flat_printer_64.bmp"
