--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19871,16 +19871,22 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 49, 15, 70, 11
   CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 120, 15, 215, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 49, 28, 70, 11
+  CONTROL "", 161, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 120, 28, 215, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 49, 41, 70, 11
+  CONTROL "", 171, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 120, 41, 215, 11
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 49, 54, 70, 11
+  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 120, 54, 215, 11
   CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 340, 15, 125, 134
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 499, 14, 55, 12
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 589, 14, 55, 12
   CONTROL "", 150, "TBtnBmp", 0x00000000, 654, 15, 12, 11
   CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 5, 83, 326, 236
   CONTROL "Pasar todo >>", 210, "Button", WS_TABSTOP, 5, 322, 54, 14
-  CONTROL "Pasar linea >", 220, "Button", WS_TABSTOP, 277, 322, 54, 14
+  CONTROL "Pasar línea >", 220, "Button", WS_TABSTOP, 277, 322, 54, 14
   CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 340, 83, 326, 236
-  CONTROL "< Pasar linea", 310, "Button", WS_TABSTOP, 340, 322, 54, 14
-  CONTROL "<< Pasar todo", 320, "Button", WS_TABSTOP, 612, 322, 54, 14
+  CONTROL "< Quitar línea ", 310, "Button", WS_TABSTOP, 340, 322, 54, 14
+  CONTROL "<< Quitar todo", 320, "Button", WS_TABSTOP, 612, 322, 54, 14
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 565, 386, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 620, 386, 50, 14
   CONTROL "Factura de proveedor", -1, "Button", BS_GROUPBOX, 336, 73, 334, 268
@@ -19895,14 +19901,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Rango", -1, "Button", BS_GROUPBOX, 2, 4, 667, 67
   CONTROL "Desde", -1, "Static", WS_GROUP, 474, 18, 22, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 562, 18, 21, 8
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 49, 28, 70, 11
-  CONTROL "", 161, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 120, 28, 215, 11
   CONTROL "Artículo", -1, "Static", WS_GROUP, 5, 31, 34, 8
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 49, 41, 70, 11
-  CONTROL "", 171, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 120, 41, 215, 11
   CONTROL "Propiedad 1", -1, "Static", WS_GROUP, 5, 44, 43, 8
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 49, 54, 70, 11
-  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 120, 54, 215, 11
   CONTROL "Propiedad 2", -1, "Static", WS_GROUP, 5, 57, 43, 8
 }
 
